flask-app/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: flask-app
  annotations:
    istio-injection: enabled
