flask-app/flask-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-app
  namespace: flask-app
spec:
  selector:
    app: flask-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
